Revert "Subzero. ARM32. Initial sandboxing code."
This reverts commit 38ac6bee58b7ef19cbc2b0540315c3c299ca77a9 (mistakenly
TBRed.)

BUG= https://code.google.com/p/nativeclient/issues/detail?id=4076

Review URL: https://codereview.chromium.org/1499973002 .

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -404,10 +404,7 @@ check-xtest: $(OBJDIR)/pnacl-sz make_symlink runtime
           -e x8664,native,sse2,test_global \
           -i arm32,native,neon \
           -e arm32,native,neon,test_vector_ops \
-          -e arm32,native,neon,test_select \
-          -i arm32,sandbox,neon \
-          -e arm32,sandbox,neon,test_vector_ops \
-          -e arm32,sandbox,neon,test_select
+          -e arm32,native,neon,test_select
 	PNACL_BIN_PATH=$(PNACL_BIN_PATH) \
 	$(LLVM_SRC_PATH)/utils/lit/lit.py -sv crosstest/Output
 endif
