Subzero. ARM32. Implements sandboxing.
(See https://codereview.chromium.org/1491473002/ for the steps taken
while implementing sandboxing.)

BUG= https://code.google.com/p/nativeclient/issues/detail?id=4076
R=stichnot@chromium.org

Review URL: https://codereview.chromium.org/1499983002 .

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -402,9 +402,9 @@ check-xtest: $(OBJDIR)/pnacl-sz make_symlink runtime
           -e x8664,native,sse2 \
           -e x8664,native,sse4.1,test_vector_ops \
           -e x8664,native,sse2,test_global \
-          -i arm32,native,neon \
-          -e arm32,native,neon,test_vector_ops \
-          -e arm32,native,neon,test_select
+          -i arm32,neon \
+          -e arm32,neon,test_vector_ops \
+          -e arm32,neon,test_select
 	PNACL_BIN_PATH=$(PNACL_BIN_PATH) \
 	$(LLVM_SRC_PATH)/utils/lit/lit.py -sv crosstest/Output
 endif
