Subzero. ARM32. Introduces explicit register parameter attribute.
The ARM32 backend used to rely on a specific register declaration order
for calling convention register assignment. This CL introduces a new
field in the ARM32 register tables for explicitly setting which
register holds which parameter.

BUG= https://code.google.com/p/nativeclient/issues/detail?id=4076
R=stichnot@chromium.org

Review URL: https://codereview.chromium.org/1508423003 .

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -323,6 +323,9 @@ $(SB_OBJDIR)/pnacl-sz.x86-32.nexe: $(SB_OBJS)
 	$(SB_TRANSLATE) -arch x86-32 $(PNACL_SZ_BASE).nonfinal.pexe -o $@ \
           --allow-llvm-bitcode-input
 
+src/IceRegistersARM32.def: pydir/gen_arm32_reg_tables.py
+	python $< > $@
+
 # TODO(stichnot): Be more precise than "*.h" here and elsewhere.
 $(OBJS): $(OBJDIR)/%.o: src/%.cpp src/*.h src/*.def
 	$(CXX) -c $(CXXFLAGS) $< -o $@
