--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -402,7 +402,7 @@ check-xtest: $(OBJDIR)/pnacl-sz make_symlink runtime
           -i x8632,sandbox,sse4.1,Om1 \
           -e x8664,native,sse2 \
           -e x8664,native,sse4.1,test_vector_ops \
-          -e x8664,native,sse2,test_global \
+          -e x8664,sandbox,sse4.1,Om1 \
           -i arm32,neon \
           -e arm32,neon,test_vector_ops \
           -e arm32,neon,test_select
@@ -424,6 +424,11 @@ TARGET := x8632
 ifeq ($(TARGET),x8632)
   TARGETFLAG=x8632
   SETUP=SetupGccX8632Opt
+  SPEC := -O2 --filetype=obj
+endif
+ifeq ($(TARGET),x8664)
+  TARGETFLAG=x8664
+  SETUP=SetupGccX8664Opt
   SPEC := -O2 --filetype=obj
 endif
 ifeq ($(TARGET),arm32)
