Subzero. X8664. Fixes filetype=asm.
Fixes filetype=asm for x8664.

BUG= https://bugs.chromium.org/p/nativeclient/issues/detail?id=4077
R=stichnot@chromium.org

Review URL: https://codereview.chromium.org/1543573002 .

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -400,8 +400,8 @@ check-xtest: $(OBJDIR)/pnacl-sz make_symlink runtime
           -i x8632,native,sse2 \
           -i x8632,native,sse4.1,test_vector_ops \
           -i x8632,sandbox,sse4.1,Om1 \
-          -e x8664,native,sse2 \
-          -e x8664,native,sse4.1,test_vector_ops \
+          -i x8664,native,sse2 \
+          -i x8664,native,sse4.1,test_vector_ops \
           -e x8664,sandbox,sse4.1,Om1 \
           -i arm32,neon \
           -e arm32,neon,test_vector_ops \
