--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -367,10 +367,15 @@ $(OBJDIR)/unittest/AssemblerX8632: $(OBJDIR)/unittest
 $(OBJDIR)/unittest/AssemblerX8664: $(OBJDIR)/unittest
 	@mkdir -p $@
 
-RT_SRC := runtime/szrt.c runtime/szrt_ll.ll runtime/szrt_profiler.c
+RT_SRC := runtime/szrt.c runtime/szrt_ll.ll runtime/szrt_profiler.c \
+          runtime/szrt_asm_x8632.s runtime/szrt_asm_x8664.s \
+          runtime/szrt_asm_arm32.s
 RT_OBJ := build/runtime/szrt_native_x8632.o build/runtime/szrt_sb_x8632.o \
+          build/runtime/szrt_nonsfi_x8632.o \
           build/runtime/szrt_native_x8664.o build/runtime/szrt_sb_x8664.o \
-          build/runtime/szrt_native_arm32.o build/runtime/szrt_sb_arm32.o
+          build/runtime/szrt_nonsfi_x8664.o \
+          build/runtime/szrt_native_arm32.o build/runtime/szrt_sb_arm32.o \
+          build/runtime/szrt_nonsfi_arm32.o
 
 runtime: $(RT_OBJ)
 
@@ -400,10 +405,12 @@ check-xtest: $(OBJDIR)/pnacl-sz make_symlink runtime
           -i x8632,native,sse2 \
           -i x8632,native,sse4.1,test_vector_ops \
           -i x8632,sandbox,sse4.1,Om1 \
+          -i x8632,nonsfi,sse2,O2 -e x8632,nonsfi,test_select \
           -i x8664,native,sse2 \
           -i x8664,native,sse4.1,test_vector_ops \
           -e x8664,sandbox,sse4.1,Om1 \
           -i arm32,neon \
+          -e arm32,nonsfi \
           -e arm32,neon,test_vector_ops \
           -e arm32,neon,test_select
 	PNACL_BIN_PATH=$(PNACL_BIN_PATH) \
