move .rst to docs
BUG=
R=stichnot@chromium.org

Review URL: https://codereview.chromium.org/1562543002 .

Patch from Reed Kotler <rkotlerimgtec@gmail.com>.

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -517,4 +517,4 @@ clean:
 	rm -rf pnacl-sz *.o $(OBJDIR) $(SB_OBJDIR) build/pnacl-sz.bloat.json
 
 clean-all: clean
-	rm -rf build/ docs/
+	rm -rf build/ docs/html
