Move Doxyfile files to docs and associated makefile. This is a prelude to allowing a docs directory for all the RST files as well as expanding the makefile to build the docs for those too, not just the doxygen output.
The doxygen html has been moved to build/docs/html so it's not in a source directory.

Gitignore has been fixed to allow files in docs now without complaining.

BUG=
R=stichnot@chromium.org

Review URL: https://codereview.chromium.org/1562703002 .

Patch from Reed Kotler <rkotlerimgtec@gmail.com>.

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -510,11 +510,10 @@ bloat: make_symlink
 	@echo See Subzero size breakdown in bloat/pnacl-sz.bloat.html
 
 docs:
-	doxygen Doxyfile
-	@echo See file://`pwd`/docs/html/index.html
+	make -C docs -f Makefile.standalone
 
 clean:
 	rm -rf pnacl-sz *.o $(OBJDIR) $(SB_OBJDIR) build/pnacl-sz.bloat.json
 
 clean-all: clean
-	rm -rf build/ docs/html
+	rm -rf build/  crosstest/Output/
