Add option to force filetype=asm for testing
Also turn it on for presubmit testing.

BUG=
R=stichnot@chromium.org

Review URL: https://codereview.chromium.org/1531623007 .

--- a/tests_lit/lit.cfg
+++ b/tests_lit/lit.cfg
@@ -89,6 +89,8 @@ iflc2i_atts_cmd = if_atts + [if_cond_flag('allow_llvm_ir_as_input'
 pnacl_sz_cmd = [os.path.join(pydir, 'run-pnacl-sz.py'),
                 '--pnacl-sz', pnacl_sz_tool,
                 '--pnacl-bin-path', pnaclbinpath]
+if 'FORCEASM' in lit_config.params:
+  pnacl_sz_cmd += ['--forceasm']
 
 # Run commands only if corresponding build attributes apply, including
 # for each compiler setup.
