Subzero. ARM32. Fixes vpush/vpop bug.
if vpush/vpop needs to emit multiple instructions (because of
non-consecutive registers), then the emitted sequence should be:

vpush list1
vpush list2
...
vpop list2
vpop list1

Subzero was emiting vpop in the wrong order:

vpop list1
vpop list2

These multiple lists push/pop arise because of the way fp32 and fp64
registers are declared (s0 -> s31, d31 -> d0).

This CL modifies fp64 registers so they are declared in ascending
order (d0 -> d31), which fixes subzero temporarily. The appropriate
fix is to change vpop to be emitted in the right order.

BUG= https://bugs.chromium.org/p/nativeclient/issues/detail?id=4076
R=sehr@chromium.org, stichnot@chromium.org

Review URL: https://codereview.chromium.org/1592663004 .

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -512,9 +512,10 @@ check-presubmit presubmit:
 # Build spec2k under -Om1/arm32.
 	+make -f Makefile.standalone \
           TARGET=arm32 SPECFLAGS='-Om1' SPECBUILDONLY=true check-spec
-# Run a few spec2k tests for arm32 using qemu.
+# Run a few spec2k tests for arm32 using qemu. Keep the list sorted in
+# roughly reverse order of runtime.
 	+make -f Makefile.standalone \
-          TARGET=arm32 ALLSPEC='176.gcc 181.mcf 254.gap' check-spec
+          TARGET=arm32 ALLSPEC='252.eon 254.gap 176.gcc 181.mcf' check-spec
 # Provide validation of user awesomeness!
 	echo Success
 
