Subzero: Always enable --echo-cmd in the lit tests.
BUG= none
R=stichnot@chromium.org

Review URL: https://codereview.chromium.org/1604063002 .

Patch from Reed Kotler <rkotlerimgtec@gmail.com>.

--- a/tests_lit/lit.cfg
+++ b/tests_lit/lit.cfg
@@ -87,6 +87,7 @@ iflc2i_atts_cmd = if_atts + [if_cond_flag('allow_llvm_ir_as_input'
 
 # Base command for running pnacl-sz
 pnacl_sz_cmd = [os.path.join(pydir, 'run-pnacl-sz.py'),
+                '--echo-cmd',
                 '--pnacl-sz', pnacl_sz_tool,
                 '--pnacl-bin-path', pnaclbinpath]
 if 'FORCEASM' in lit_config.params:
